# VisDrone-dataset-python-toolkit

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  convertVis_to_xml.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  vis-drone-faster-rcnn.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  PRE_COMMIT_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md
configs/: README.md  default_config.yaml  fasterrcnn_mobilenet.yaml  fasterrcnn_resnet50.yaml  fcos_resnet50.yaml  retinanet_resnet50.yaml
inference_graph/: model.ckpt.index  pipeline.config
tests/: README.md  __init__.py  conftest.py  test_converters.py  test_dataset.py  test_utils.py  test_visualization.py
training/: checkpoint  faster_rcnn_inception_v2_pets.config  labelmap.pbtxt  model.ckpt-0.index  model.ckpt-2250.index  model.ckpt-4702.index  model.ckpt-7123.index  model.ckpt-9577.index  ssd_mobilenet_v1_coco.config
